--- a/Spellchecker/src/Gui.Spellchecker/App.xaml
+++ b/Spellchecker/src/Gui.Spellchecker/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="Gui.Spellchecker.App"
+﻿<Application x:Class="Rm.Spellchecker.Gui.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
